@@ -2,7 +2,7 @@
 #include "../CFTesting.h"
 
 #define ARRAY_SIZE 5
-const int array[ARRAY_SIZE] = { 5, 2, 3, 4, 1 };
+const CFIndex array[ARRAY_SIZE] = { 5, 2, 3, 4, 1 };
 
 CFComparisonResult comp (const void *val1, const void *val2, void *context)
 {
@@ -22,13 +22,15 @@ int main (void)
   ma = CFArrayCreateMutableCopy (NULL, 6, a);
   PASS(ma != NULL, "CFMutableArray created.");
   
-  CFArrayAppendValue (ma, 7);
-  n = CFArrayGetCount (ma);
+  n = 7;
+  CFArrayAppendValue (ma, (const void*)n);
+  n = CFArrayGetCount ((CFArrayRef)ma);
   PASS(n == ARRAY_SIZE + 1, "CFMutableArray has correct number of values.");
   
   CFArraySortValues (ma, CFRangeMake(0, n), &comp, NULL);
-  PASS(CFArrayGetValueAtIndex(ma, 0) == 1
-    && CFArrayGetValueAtIndex(ma, ARRAY_SIZE) == 7, "Array sorted correctly.");
+  PASS((CFIndex)CFArrayGetValueAtIndex((CFArrayRef)ma, 0) == 1
+    && (CFIndex)CFArrayGetValueAtIndex((CFArrayRef)ma, ARRAY_SIZE) == 7,
+    "Array sorted correctly.");
   
   return 0;
 }
