@@ -1,5 +1,15 @@
 2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Tests/CFArray/mutablearray.m:
+	* Tests/CFArray/create.m: Fix tests for 64-bit systems.
+	* Tests/CFNumberFormatter/parse.m:
+	* Tests/CFRuntime/runtime.m:
+	* Tests/CFString/format.m:
+	* Tests/CFString/mutablestring.m:
+	* Tests/CFString/create.m: Quiet compiler.
+
+2012-01-24 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* GNUMakefile: Include Tests as a subproject.
 	* Tests/GNUmakefile: Add 'make check'.
 
